// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basics > basic use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["p"]);
  
  return function template(ctx, node, key = "") {
    return comp1({p: 1}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > basic use 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span>child<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.p);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > can select a sub widget  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`OtherChild\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['this'].state.options.flag) {
      b2 = comp1({}, key + \`__1\`, node, this, null);
    }
    if (!ctx['this'].state.options.flag) {
      b3 = comp2({}, key + \`__2\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`basics > can select a sub widget  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>CHILD 1</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`basics > can select a sub widget  3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>CHILD 2</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`basics > can select a sub widget, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  const comp2 = createComponent(app, \`OtherChild\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['this'].state.flag) {
      b2 = comp1({}, key + \`__1\`, node, this, null);
    }
    if (!ctx['this'].state.flag) {
      b3 = comp2({}, key + \`__2\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`basics > can select a sub widget, part 2 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>CHILD 1</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`basics > can select a sub widget, part 2 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div>CHILD 2</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`basics > sub widget is interactive 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["p"]);
  
  return function template(ctx, node, key = "") {
    return comp1({p: 1}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > sub widget is interactive 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].inc, ctx, ev);
  
  let block1 = createBlock(\`<span><button block-handler-0="click">click</button>child<block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    const b2 = safeOutput(ctx['this'].state.val);
    return block1([hdlr1], [b2]);
  }
}"
`;

exports[`basics > top level sub widget with a parent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentB\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > top level sub widget with a parent 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`ComponentC\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > top level sub widget with a parent 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<span>Hello</span>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
